user list API implemented
