# src/controllers/user.js
@@ -53,7 +53,9 @@ class UserController {
         res.status(400).json(response.handleValidationError(errors.array()));
         return;
       }
-      let responseObj = await userService.listUsers();
+      let responseObj = await userService.listUsers(
+        req.tokenInfo[constants.ACCOUNT_ID]
+      );
       res.status(responseObj.status_code).json(responseObj);
     } catch (err) {
       return next(err);
